v4.6.1
- FIX: Block Breaker dropping wrong metadata for some blocks
- FIX: Block Breaker not playing sound effects
- FIX: Block Breaker break particles
- ADDED: Item Importers can suck up items in front of them

v4.6.0
- ADDED: Gem Armor
- FIX: Coloured Lights compatibility
- FIX: Recipes with microblocks
- FIX: Chip upgrades not installing
- FIX: Deviating lily farming overall loss
- FIX: Lamps letting sky light through
- FIX: Volcanos with large missing chunks
- FIX: Volcanos' lava not flowing

v4.5.16
- FIX: Requirement of packaged CC API
- FIX: Infinite loop when using bus converter
- FIX: Red alloy wire crash
- FIX: Gameplay exploit

v4.5.15
- FIX: Segment display textures
- FIX: Lamps not updating on placement
- FIX: Array gates not reading dust signal
- CHANGE: Tweaked bus converter algorithm

v4.5.14
- FIX: Flat gate texture crash
- FIX: Attempted fix for crash with tools inside crafting benches
- FIX: Array gates not passing signal to other gates

v4.5.13
- FIX: Updated ComputerCraft compatibility

v4.5.12
- FIX: Thermal Expansion compatibility
- FIX: Lily maturing fully after world reload

v4.5.11
- ADDED: Decoding Randomizer gate
- CHANGE: Randomizer outputs can now be configured
- FIX: Light halos breaking at large world coordinates
- FIX: Rare crash with array gate placement

v4.5.10
- FIX: Crash on world generation
- FIX: Time set on sequencers
- FIX: Sickles not harvesting tall grass
- CHANGE: Enabled tube device inventory export

v4.5.9
- ADDED: Stacking Latch gate
- ADDED: Segment Display gate
- ADDED: Deviating Lily
- ADDED: Config option for minimum timer gate settings
- ADDED: Pressure tubes + Importer machine
- ADDED: Block Breaker
- CHANGE: Complete gate rewrite
- CHANGE: Simplified Extractor chip's glitchy side selection
- FIX: SR Latch stuck state bug
- FIX: Infinite update loop on Bus Input Panel
- FIX: Colored Lights crash
- FIX: Many incorrect/weird gate models
- FIX: Some awkward volcano generation

v4.5.8